# WebDataApiProxyManager

./: .gitignore  AGENT-README.md  README.md  README_zh.md  docker-compose.yml
.github/workflows/: docker-image.yml
crates/admin-api/: Cargo.toml
crates/admin-api/src/: lib.rs  provider_accounts.rs
crates/app/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: auth.rs  lib.rs  persistence.rs
crates/providers/exa/: Cargo.toml
crates/providers/exa/src/: lib.rs
crates/providers/firecrawl/: Cargo.toml
crates/providers/firecrawl/src/: lib.rs
crates/providers/jina/: Cargo.toml
crates/providers/jina/src/: lib.rs
crates/providers/tavily/: Cargo.toml
crates/providers/tavily/src/: lib.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/web/app/: package.json
crates/web/app/src/: types.ts
crates/web/app/src/api/: provider-accounts.ts
crates/web/app/src/features/api-keys/: proxy-endpoints-panel.tsx
crates/web/app/src/features/egress-proxies/: create-proxy-drawer.tsx  hooks.ts  page.tsx  proxies-table.tsx  proxy-row.tsx
crates/web/app/src/features/provider-accounts/: account-row.tsx  accounts-table.tsx  create-account-drawer.tsx  page.tsx  use-provider-account-mutations.ts  use-provider-accounts-state.ts  use-provider-accounts.ts
crates/web/app/src/features/request-logs/: page.tsx
crates/web/app/src/i18n/messages/: accounts.ts  operations.ts
crates/web/app/src/lib/: format.ts
crates/web/app/src/styles/features/: proxies.css
crates/worker/: Cargo.toml
