[package]
name = "wdapm-admin-api"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.8"
hex = "0.4.3"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["formatting", "parsing"] }
tracing = "0.1.44"
uuid = { version = "1.22.0", features = ["v7"] }
wdapm-core = { version = "0.1.0", path = "../core" }
wdapm-storage = { version = "0.1.0", path = "../storage" }
wdapm-worker = { version = "0.1.0", path = "../worker" }
