[package]
name = "wdapm-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
hex = "0.4.3"
rand = "0.10.1"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["compression-br", "compression-gzip", "fs", "set-header"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
wdapm-admin-api = { version = "0.1.0", path = "../admin-api" }
wdapm-core = { version = "0.1.0", path = "../core" }
wdapm-gateway = { version = "0.1.0", path = "../gateway" }
wdapm-provider-exa = { version = "0.1.0", path = "../providers/exa" }
wdapm-provider-firecrawl = { version = "0.1.0", path = "../providers/firecrawl" }
wdapm-provider-jina = { version = "0.1.0", path = "../providers/jina" }
wdapm-provider-tavily = { version = "0.1.0", path = "../providers/tavily" }
wdapm-scheduler = { version = "0.1.0", path = "../scheduler" }
wdapm-storage = { version = "0.1.0", path = "../storage" }
wdapm-worker = { version = "0.1.0", path = "../worker" }
