[package]
name = "wdapm-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
reqwest = { version = "0.13.4", features = ["json", "socks"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
time = "0.3.53"
tower-http = { version = "0.6.11", features = ["trace"] }
tracing = "0.1.44"
uuid = { version = "1.23.4", features = ["v7"] }
hex = "0.4.3"
sha2 = "0.10"
wdapm-core = { version = "0.1.0", path = "../core" }
wdapm-provider-firecrawl = { version = "0.1.0", path = "../providers/firecrawl" }
wdapm-scheduler = { version = "0.1.0", path = "../scheduler" }
wdapm-storage = { version = "0.1.0", path = "../storage" }
wdapm-worker = { version = "0.1.0", path = "../worker" }
tokio = { version = "1.52.3", features = ["rt", "sync"] }
