[package]
name = "wdapm-scheduler"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.18"
time = { version = "0.3.53", features = ["parsing", "formatting"] }
tracing = "0.1.44"
wdapm-core = { version = "0.1.0", path = "../core" }
wdapm-storage = { version = "0.1.0", path = "../storage" }
