[package]
name = "wdapm-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
rand = "0.10.1"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate", "uuid", "time", "json"] }
thiserror = "2.0.18"
tracing = "0.1.44"
uuid = { version = "1.22.0", features = ["v7"] }
wdapm-core = { version = "0.1.0", path = "../core" }
