[package]
name = "wdapm-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.4", features = ["json", "socks"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
time = { version = "0.3.53", features = ["formatting"] }
tracing = "0.1.44"
uuid = { version = "1.23.4", features = ["v7"] }
wdapm-core = { version = "0.1.0", path = "../core" }
wdapm-provider-firecrawl = { version = "0.1.0", path = "../providers/firecrawl" }
wdapm-storage = { version = "0.1.0", path = "../storage" }
